# CURC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TodoList.md  version.h
bench/: CMakeLists.txt  CURC_server_test.sh  README.md  benchmark.cpp  pe_db.txt  pe_gpu_db.txt  se_db.txt  se_gpu_db.txt  simple_se_gpu_db.txt  sort_pe_read.cpp
cmake/: GetVersion.cmake
env/: check_cuda.cu
src/: LICENSE  Param.hpp  PgMatcher.hpp  compress.cu  compress.cuh  constant.hpp  decompress.cpp  decompress.cu  decompress.hpp  fast_lzma2_helper.cpp  fast_lzma2_helper.hpp  main.cpp  preprocess.cpp  preprocess.hpp  util.cuh
